# nice-plug-slint

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md
examples/open_parented/: Cargo.toml
examples/open_parented/src/: main.rs
examples/open_parented/src/gui/: ui.slint
examples/open_window/: Cargo.toml
examples/open_window/src/: main.rs
examples/render_femtovg/: Cargo.toml
examples/render_femtovg/src/: main.rs
src/: lib.rs  open_gl_interface.rs  platform.rs  window_adapter.rs  window_handler.rs
