[package]
name = "nih_plug_slint"
version = "0.1.1"
edition = "2021"
license = "ISC"
description = "An adapter to use Slint GUIs with NIH-plug"
keywords = ["audio", "plugin", "vst3", "clap", "slint"]
categories = ["multimedia::audio"]

[dependencies]
nice-plug-core = { git = "https://codeberg.org/RustAudio/nice-plug" }
baseview = { git = "https://github.com/RustAudio/baseview.git", features = ["opengl"] }
slint = { version = "=1.15.1", default-features = false, features = ["std", "renderer-femtovg", "raw-window-handle-06", "compat-1-2"] }
i-slint-renderer-femtovg = { version = "=1.15.1", features = ["opengl"] }
raw-window-handle = "0.6"
crossbeam = "0.8"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
keyboard-types = { version = "0.6.2", default-features = false }

[features]
default = []
