[package]
name = "open_parented"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
baseview.workspace = true
nice_plug_slint = { path = "../../" }
slint = { version = "=1.17.0", default-features = false, features = [
  "std",
  "renderer-femtovg",
  "raw-window-handle-06",
  "compat-1-2",
] }
i-slint-renderer-femtovg = { version = "=1.17.0", features = ["opengl"] }
softbuffer = "0.3.4"
rtrb = "0.3.4"

[build-dependencies]
slint-build = "=1.17.0"
